# quick_db

./: CMakeLists.txt  README.md  agile.md  benchmark.md  cli.cpp  plan.md
.github/workflows/: c-cpp.yml
src/: db.cpp  db.h  main.cpp
tests/: tests.cpp
